# event-song-request

./: .gitignore  .replit  LICENSE  Pasted-Basic-Event-Song-Request-App-1-Setup-Environment-Create-a-new-Python-Repl-project-I-1729426771326.txt  README.md  app.py  create_repo.py  deployment_options.md  extensions.py  github_setup.py  main.py  models.py  pyproject.toml  routes.py
instance/: song_requests.db
public/: models.py
public/static/js/: script.js
public/templates/: index.html
static/js/: script.js
templates/: base.html  dj_interface.html  index.html  song_list.html
