[project]
name = "repl-nix-eventsongrequestapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "youtube-search-python>=1.6.6",
    "flask-socketio>=5.4.1",
    "flask-limiter>=3.8.0",
    "pytz>=2024.2",
    "python-socketio>=5.11.4",
    "eventlet>=0.37.0",
]
